Adding the StreamAlbumPropertiesLayout class